--- a/package.json
+++ b/package.json
@@ -1,47 +1,27 @@
 {
-  "name": "owtf.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "owtf-site",
+  "version": "2.0.0",
+  "private": true,
   "scripts": {
-    "develop": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "start": "node server.js",
-    "gh-pages": "gatsby build --prefix-paths && gh-pages -d public",
-    "lint": "node_modules/.bin/eslint src --fix",
-    "dev": "(shx --silent rm -rf public || shx true) && gatsby develop",
-    "server": "cross-env NODE_ENV=development DEBUG=api nodemon server.js",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "basic-auth": "^2.0.0",
-    "compression": "^1.7.1",
-    "debug": "^3.1.0",
-    "express": "^4.16.2",
-    "helmet": "^3.8.2",
-    "serve-static": "^1.13.1"
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "bootstrap": "^4.0.0-beta.2",
-    "cross-env": "^5.1.1",
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1",
-    "gatsby": "^1.9.119",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-google-analytics": "^1.0.12",
-    "gatsby-plugin-postcss-sass": "^1.0.13",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-react-next": "^1.0.4",
-    "gatsby-source-filesystem": "^1.5.8",
-    "gatsby-transformer-json": "^1.0.12",
-    "gh-pages": "^1.1.0",
-    "pixrem": "^4.0.1",
-    "shx": "^0.2.2",
-    "svg-sprite-loader": "^3.4.1"
+    "@types/node": "20.11.19",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
